src/assets/css/table.css
/* ... */
.row-not-saved {
    background-color: #FEDADA !important;
}

.row-selected {
    background-color: $brand-selected-color !important;

    &.row-not-saved {
        border-left: 3px solid #e78484;
    }
}

.table-sub-summary-row {
    background-color: #fff !important;
    border-top: 1px solid $brand-color-secondary;
}

.table-total-summary-row {
    background-color: $brand-color-secondary;
    color: #fff;
    text-transform: uppercase;

    td {
        border: 0;
    }
}

.table-footer-header {
    background-color: #bdd0dc;
    color: #fff;
    font-weight: bold;
}

.table-input-inline {
    border: 0;
    outline-width: 0;
    width: 100%;
    height: 20px;
    color: $brand-font-color;
    background-color: #fff;
    text-align: center;
}

.table-flex-wrapper {
    display: flex;
    flex-grow: 1;
    flex-direction: column;

    .document-list-table {
        flex: 2.6;
    }
}

.table-flex-wrapper-row {
    flex-direction: row;
}

.row-bordered-bottom td {
    border-bottom: 1px solid;
}

.row-bordered-bright td {
    border-color: $brand-light-color;
}

.row-bordered-dark td {
    border-color: $brand-font-color;
}

.row-bordered-mod td:nth-child(1) {
    border: 0;
}

.product-order-summary {
    width: 100%;

    td {
        padding-top: 0.125rem;
        padding-bottom: 0.125rem;
    }

    td:nth-child(1) {
        width: 15%;
    }

    td:nth-child(2) {
        width: 30%;
    }

    td:nth-child(3) {
        width: 30%;
        text-align: right;
    }

    td:last-child {
        text-align: right;
    }

    tr:last-child {
        font-weight: bold;
        font-size: 1rem;
    }
}

/* Quick inputs */

.quick-input-container {
    display: flex;
    align-items: center;
    flex-direction: row;
    flex:1;

     > * {
        margin:0;
    }

    .form-group {
        > .row {
            margin-bottom: 15px;
        }
    }

    @media (min-width: $breakpoint-sm){
        margin-top: 15px !important;
    }

    @media (min-width: $breakpoint-md){
        > .row {
            margin-bottom: 0;
        }

        .input-dropdown-container {
            min-width: auto;
        }
    }

    @media (min-width: $breakpoint-lg){
        .hint {
            text-align: right;
        }
    }
}


/* Pagination */

.page-item {
    display: inline-block;

    &.active {
        .page-link, .page-link:focus, .page-link:hover {
            background-color: $brand-color-primary;
            border-color: $brand-color-primary;       
        }

        .page-link-compressed {
            background-color: transparent;
            font-weight: bold;
            color: $brand-font-color;
        }
    }

    &.inactive {
        cursor: default;
    }
}

.page-link {
    display: inline-block;
    text-align: center;
}

@media only screen and (min-width: $breakpoint-md){
    .page-link {
        min-width: 38px;
    }
}

.page-link-compressed{
    border:0;
    background-color: transparent;
    padding: .1rem .3rem;
}

.empty-info-text {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 200px;

    div {
        text-align: center;
    }
}

.pagination {
    margin-top: 0;
    margin-bottom: 0;
}

.pagination-row {
    margin: .3125rem;
    font-size: .7rem;
    display: flex;
    flex-wrap: nowrap;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

@media only screen and (min-width: $breakpoint-md){
    .desktop {
        .pagination-row {
            margin: 1rem;
        }
    }
}

.order-list-panel-body {
    .pagination-wrapper {
        padding: 0 10px;
    }

    .page-link {
        padding: .4rem .65rem;
    }
}

.pagination-part {
    text-align: right;
}

.pagination-part>*:not(:last-of-type) {
    margin-right: 1rem;
}

.pagination-link {
    text-decoration: underline;
}

/* INDENT SIGN ================ */

$indent-height: 28px;
$indent-height-mid: 12px;
$indent-signs-offset: 4px;
$indent-collapsible-offset: 4px;

$indent-height-lg: 42px;
$indent-height-mid-lg: 18px;
$indent-signs-offset-lg: 6px;
$indent-collapsible-offset-lg: 24px;

.indent {
    position: relative;
    height: $indent-height;
}

.indent-item-mid,
.indent-icon,
.indent-bot,
.indent-mid {
    display: inline-block;
    width: 20px;
    height: $indent-height;
    vertical-align: middle;
}

.indent-mid {
    position: absolute;
    top: $indent-height-mid;
    width: 5px;
    height: 1px;
    border-top: 1px solid #afbfca;
}

.indent-item-mid {
    padding-left:$indent-signs-offset;
    
    .indent-sign {
        top: 0;
        left: 0;
        width: 1px;
        height: $indent-height;
        border-left: 1px solid #afbfca;
    
        &.indent-sign-bot {
            height: $indent-height-mid;
        }
    }
}

.indent-collapsible-item-mid {
    padding-left: calc($indent-signs-offset + $indent-collapsible-offset);
}

.indent-bot {
    position: absolute;
    bottom:-1px;
    margin-left: $indent-signs-offset;
    width: 1px;
    height: 4px;
    border-left: 1px solid #afbfca;
}

.indent-collapsible-bot {
    margin-left: calc($indent-signs-offset + $indent-collapsible-offset);
}
/* ... */

